--- a/index.html
+++ b/index.html
@@ -1,261 +1,112 @@
-
+<!doctype html>
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kalb Hotel — Boutique • Cage-Free • 24/7 Care</title>
-  <meta name="description" content="Kalb Hotel — boutique, cage-free dog suites with round-the-clock supervision." />
-
-  <!-- Badge favicon (K in a circle) -->
+  <meta name="description" content="Private suites, daily pampering, and round-the-clock supervision—so your best friend enjoys a five-star experience." />
   <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
-
   <style>
     :root{
-      --bg:#f6efe7; /* רקע בז' ורדרד */
-      --panel:#f2e6dc; /* פנלים */
-      --brand:#b78e5a; /* זהב רך */
-      --ink:#2a2420; /* טקסט כהה */
-      --muted:#9a8778; /* טקסט משני */
-      --btn:#d9b894; /* כפתור */
-      --btn-ink:#fff;
-      --ring:rgba(183,142,90,.25);
-      --radius:18px;
-      --gap:22px;
+      --bg:#f6eee8;
+      --ink:#1f1b18;
+      --muted:#947f6a;
+      --card:#f1e5dd;
+      --pill:#e5cfb8;
+      --brand:#cfa97e;
+      --ring:#d9c4ae;
     }
-
     *{box-sizing:border-box}
-    html,body{height:100%}
+    html,body{margin:0}
     body{
-      margin:0;
-      font:17px/1.6 "Georgia", "Times New Roman", serif;
+      font-family: ui-serif, Georgia, "Times New Roman", serif;
       color:var(--ink);
-      background:linear-gradient(180deg, #fff 0%, var(--bg) 15%, var(--bg) 100%);
+      background:var(--bg);
+      -webkit-font-smoothing:antialiased;
+      line-height:1.45;
     }
-    .shell{
-      max-width:1100px;
-      margin:0 auto;
-      padding:28px 20px 64px;
-      display:grid;
-      grid-template-columns: 1.05fr .95fr;
-      gap:48px;
-    }
-
-    /* Header */
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:16px;
-      margin-bottom:24px;
-    }
+    .wrap{max-width:1100px;margin:0 auto;padding:28px 22px}
+    header{display:flex;align-items:center;gap:14px}
     .mark{
-      width:44px;height:44px; border-radius:999px;
-      border:2px solid var(--brand); color:var(--brand);
-      display:grid; place-items:center; font-weight:700; font-family:Cambria, Georgia, serif;
+      width:42px;height:42px;border-radius:50%;
+      border:3px solid var(--ring);display:grid;place-items:center;
+      font-weight:700;color:var(--muted)
     }
-    .brand h1{margin:0; font-size:44px; line-height:1.05; font-weight:600; letter-spacing:.3px}
-    .tag{margin-top:6px; color:var(--muted); letter-spacing:.18em; font-size:13px}
+    .brand{font-size:44px;font-weight:800;letter-spacing:.3px}
+    .sub{letter-spacing:.18em;color:var(--muted);font-size:12px;margin-top:4px}
+    .lang{margin-left:auto;display:flex;gap:8px}
+    .lang a{
+      font-size:12px;padding:4px 10px;border-radius:999px;
+      background:var(--pill);color:#3b2f23;text-decoration:none
+    }
 
-    /* Language switch */
-    .lang{
-      position:absolute; right:22px; top:18px; display:flex; gap:8px;
-    }
-    .lang button{
-      border:1px solid var(--brand); color:var(--brand);
-      background:#fff; padding:4px 10px; border-radius:999px; cursor:pointer;
-      font:600 12px/1.2 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-    }
-    .lang button[aria-current="true"]{background:var(--brand); color:#fff}
+    .hero{display:grid;grid-template-columns:1.1fr .9fr;gap:28px;margin-top:28px}
+    @media (max-width:880px){ .hero{grid-template-columns:1fr} .lang{display:none}}
+    h1{font-size:40px;line-height:1.1;margin:0 0 14px}
+    p.lead{max-width:560px;margin:0 0 18px;color:#4a4139}
 
-    /* Left column content */
-    .lede h2{margin:0 0 10px; font-size:36px; line-height:1.15; letter-spacing:.2px}
-    .lede p{margin:0 0 22px; color:#5a4e45}
-    .cta{display:flex; gap:14px; margin:18px 0 26px}
-    .btn{
-      padding:12px 18px; border-radius:999px; border:2px solid transparent;
-      background:var(--btn); color:var(--btn-ink); font-weight:700; cursor:pointer;
-      box-shadow:0 0 0 0 rgba(0,0,0,0); transition:box-shadow .2s ease, transform .05s ease;
-    }
-    .btn.secondary{
-      background:#fff; color:var(--ink); border-color:var(--brand);
-    }
-    .btn:focus-visible{outline:none; box-shadow:0 0 0 6px var(--ring)}
-    .btn:active{transform:translateY(1px)}
+    .cta{display:flex;gap:14px;margin:22px 0 10px}
+    .btn{padding:12px 18px;border-radius:24px;font-weight:700;border:2px solid #d8c2ae;background:#fff}
+    .btn.alt{background:var(--brand);border-color:var(--brand);color:#fff}
 
-    /* Feature cards */
-    .cards{display:grid; gap:12px; margin-top:12px}
-    .card{
-      background:var(--panel); padding:14px 16px; border-radius:var(--radius);
-      border:1px solid rgba(0,0,0,.04);
-    }
-    .card h3{margin:0 0 6px; font-size:18px}
-    .card p{margin:0; color:#6f6155}
+    .cards{display:grid;gap:12px;margin-top:14px;max-width:620px}
+    .card{background:var(--card);padding:16px 18px;border-radius:14px;color:#574b41}
 
-    /* Right column gallery (2 תמונות זו מתחת לזו, בלי חפיפה) */
-    .gallery{display:flex; flex-direction:column; gap:16px}
-    figure{margin:0; border-radius:16px; overflow:hidden; background:#ddd}
-    figure img{display:block; width:100%; height:auto}
-    figcaption{display:none} /* לא מציגים את הכיתוב הירוק הדבילי */
+    /* תמונות הכלבים – שתי תמונות בעמודה הימנית */
+    .gallery{display:grid;gap:14px}
+    .dog{
+      width:100%; max-width:460px; aspect-ratio: 4/3;
+      object-fit:cover; border-radius:18px; display:block;
+      box-shadow:0 1px 0 rgba(0,0,0,.04)
+    }
+    @media (max-width:880px){ .dog{max-width:100%} }
 
-    /* Footer mini */
-    .sale{
-      margin-top:22px; font-size:14px; color:#6f6155
-    }
-    .sale b{color:var(--ink)}
-    .wrap{position:relative}
-    @media (max-width: 920px){
-      .shell{grid-template-columns:1fr; gap:28px}
-      .lang{top:12px; right:14px}
-      .brand h1{font-size:34px}
-      .lede h2{font-size:30px}
-    }
+    footer{margin-top:22px;color:#6a5b4f;font-size:13px}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="lang" aria-label="Language">
-      <button data-lang="en" aria-current="true">EN</button>
-      <button data-lang="he">HE</button>
-      <button data-lang="ar">AR</button>
-    </div>
+    <header>
+      <div class="mark">K</div>
+      <div>
+        <div class="brand">Kalb Hotel</div>
+        <div class="sub">BOUTIQUE • CAGE-FREE • 24/7 CARE</div>
+      </div>
+      <nav class="lang">
+        <a href="#">EN</a><a href="#">HE</a><a href="#">AR</a>
+      </nav>
+    </header>
 
-    <main class="shell" id="app">
-      <!-- LEFT -->
-      <section class="left">
-        <header class="brand">
-          <div class="mark">K</div>
-          <div>
-            <h1>Kalb Hotel</h1>
-            <div class="tag" data-i18n="tag">BOUTIQUE • CAGE-FREE • 24/7 CARE</div>
-          </div>
-        </header>
+    <section class="hero">
+      <!-- טקסט משמאל -->
+      <div>
+        <h1>Where dogs<br>stay like royals.</h1>
+        <p class="lead">Private suites, daily pampering, and round-the-clock
+          supervision—so your best friend enjoys a five-star experience.</p>
 
-        <div class="lede">
-          <h2 data-i18n="headline">Where dogs stay like royals.</h2>
-          <p data-i18n="sub">
-            Private suites, daily pampering, and round-the-clock supervision—so your best friend enjoys a five-star experience.
-          </p>
-          <div class="cta">
-            <a class="btn secondary" href="#contact" data-i18n="contact">Contact Us</a>
-            <a class="btn" href="https://wa.me/" target="_blank" rel="noopener" data-i18n="whatsapp">Call / WhatsApp</a>
-          </div>
-
-          <div class="cards">
-            <article class="card">
-              <h3 data-i18n="lux_title">Luxury Suites</h3>
-              <p data-i18n="lux_copy">Elegant, climate-controlled rooms with plush furnishings.</p>
-            </article>
-            <article class="card">
-              <h3 data-i18n="day_title">Daily Activities</h3>
-              <p data-i18n="day_copy">Spa treatments, play sessions, and enrichment.</p>
-            </article>
-            <article class="card">
-              <h3 data-i18n="sup_title">24/7 Supervision</h3>
-              <p data-i18n="sup_copy">Attentive staff ensuring safety and comfort.</p>
-            </article>
-          </div>
-
-          <p class="sale"><b data-i18n="domain_title">Premium Domain Available</b> · kalbhotel.com</p>
+        <div class="cta">
+          <a class="btn alt" href="https://wa.me/">Call / WhatsApp</a>
+          <a class="btn" href="mailto:info@kalbhotel.com">Contact Us</a>
         </div>
-      </section>
 
-      <!-- RIGHT -->
-      <aside class="gallery">
-        <figure class="photo">
-          <img src="assets/dogs/maltese_suite.jpg" alt="Small white dog with a satin bow on a plush ottoman">
-          <figcaption>Small white dog…</figcaption>
-        </figure>
-        <figure class="photo">
-          <img src="assets/dogs/pomeranian_glam.jpg" alt="Fluffy pomeranian on a gold armchair in a pastel room">
-          <figcaption>Fluffy pomeranian…</figcaption>
-        </figure>
-      </aside>
-    </main>
+        <div class="cards">
+          <div class="card"><strong>Luxury Suites</strong><br>
+            Elegant, climate-controlled rooms with plush furnishings.</div>
+          <div class="card"><strong>Daily Activities</strong><br>
+            Spa treatments, play sessions, and enrichment.</div>
+          <div class="card"><strong>24/7 Supervision</strong><br>
+            Attentive staff ensuring safety and comfort.</div>
+        </div>
+
+        <footer>Premium Domain Available · kalbhotel.com</footer>
+      </div>
+
+      <!-- גלריית שתי התמונות מימין -->
+      <div class="gallery">
+        <img class="dog" src="assets/dogs/maltese_suite.jpg" alt="Small white dog with a satin bow on a plush ottoman">
+        <img class="dog" src="assets/dogs/pomeranian_glam.jpg" alt="Fluffy pomeranian on a gold armchair in a pastel room">
+      </div>
+    </section>
   </div>
-
-  <script>
-    // טקסטים בשלוש שפות
-    const dict = {
-      en: {
-        tag: "BOUTIQUE • CAGE-FREE • 24/7 CARE",
-        headline: "Where dogs stay like royals.",
-        sub: "Private suites, daily pampering, and round-the-clock supervision—so your best friend enjoys a five-star experience.",
-        contact: "Contact Us",
-        whatsapp: "Call / WhatsApp",
-        lux_title: "Luxury Suites",
-        lux_copy: "Elegant, climate-controlled rooms with plush furnishings.",
-        day_title: "Daily Activities",
-        day_copy: "Spa treatments, play sessions, and enrichment.",
-        sup_title: "24/7 Supervision",
-        sup_copy: "Attentive staff ensuring safety and comfort.",
-        domain_title: "Premium Domain Available",
-        dir: "ltr"
-      },
-      he: {
-        tag: "בוטיק • ללא כלובים • השגחה 24/7",
-        headline: "מקום שהכלב מרגיש בו מלך.",
-        sub: "סוויטות פרטיות, פינוקים יומיומיים והשגחה מסביב לשעון — כדי שחברך הטוב ייהנה מחוויית חמישה כוכבים.",
-        contact: "צור קשר",
-        whatsapp: "שיחה / וואטסאפ",
-        lux_title: "סוויטות יוקרה",
-        lux_copy: "חדרים אלגנטיים, ממוזגים ומאובזרים בריהוט מפנק.",
-        day_title: "פעילויות יומיות",
-        day_copy: "טיפולי ספא, סשני משחק והעשרה.",
-        sup_title: "השגחה 24/7",
-        sup_copy: "צוות קשוב המבטיח בטיחות ונוחות.",
-        domain_title: "דומיין פרימיום למכירה",
-        dir: "rtl"
-      },
-      ar: {
-        tag: "بوتيك • بدون أقفاص • إشراف 24/7",
-        headline: "مكان يقيم فيه الكلاب كأنهم ملوك.",
-        sub: "أجنحة خاصة، تدليل يومي وإشراف على مدار الساعة — ليستمتع صديقك بأعلى مستوى من الراحة.",
-        contact: "تواصل معنا",
-        whatsapp: "اتصال / واتساب",
-        lux_title: "أجنحة فاخرة",
-        lux_copy: "غرف أنيقة مع تحكم بالمناخ وأثاث مريح.",
-        day_title: "أنشطة يومية",
-        day_copy: "جلسات لعب وعلاجات سبا وإثراء.",
-        sup_title: "إشراف 24/7",
-        sup_copy: "طاقم يقظ يضمن السلامة والراحة.",
-        domain_title: "نطاق مميز متاح",
-        dir: "rtl"
-      }
-    };
-
-    // החלפת שפה ידנית
-    const $ = (s, all=false)=> all?document.querySelectorAll(s):document.querySelector(s);
-    const setLang = code=>{
-      const t = dict[code] || dict.en;
-      document.documentElement.lang = code;
-      document.documentElement.dir = t.dir;
-      $("[data-i18n]", true).forEach(el=>{
-        const key = el.getAttribute("data-i18n");
-        if(t[key]) el.textContent = t[key];
-      });
-      $(".lang button[aria-current='true']")?.setAttribute("aria-current","false");
-      $(`.lang button[data-lang='${code}']`)?.setAttribute("aria-current","true");
-      localStorage.setItem("kalb_lang", code);
-    };
-
-    // זיהוי שפה אוטומטי (עם זכירת בחירה)
-    (function(){
-      const saved = localStorage.getItem("kalb_lang");
-      if(saved) return setLang(saved);
-      const n = (navigator.languages && navigator.languages[0]) || navigator.language || "en";
-      const lc = n.toLowerCase();
-      if(lc.startsWith("he")) setLang("he");
-      else if(lc.startsWith("ar")) setLang("ar");
-      else setLang("en");
-    })();
-
-    $(".lang", true).forEach(()=>{});
-    $(".lang").addEventListener("click", (e)=>{
-      const b = e.target.closest("button[data-lang]");
-      if(!b) return;
-      setLang(b.getAttribute("data-lang"));
-    });
-  </script>
-
-  <!-- force rebuild -->
 </body>
 </html>
